# dsp-chain-project

./: CMakeLists.txt  README.md  TODO.md  test_dsp
core/: dsp_core.h
dsp-chain-project/: README.md  test_dsp.c
dsp-chain-project/core/: dsp_core.c
dsp-chain-project/plugin/: dsp_chain.cpp  manifest.ttl
dsp-chain-project/prototype/: simple_dsp.dsp
plugin/: dsp_chain.ttl
prototype/: simple_dsp_lv2  simple_dsp_lv2.cpp
